Add favicon and update params settings

--- a/hugo.toml
+++ b/hugo.toml
@@ -4,9 +4,14 @@ title = 'Wet / Rain'
 theme = 'PaperMod'
 
 [params]
-  ShowReadingTime = true
-  ShowShareButtons = true
   ShowPostNavLinks = true
+
+  # Favicon 設定
+[params.assets]
+  favicon = "/favicon.ico"
+  favicon16x16 = "/favicon-16x16.png"
+  favicon32x32 = "/favicon-32x32.png"
+  apple_touch_icon = "/apple-touch-icon.png"
 
 [[menu.main]]
   name = "Home | 首頁"
