content: update categories and add new post

--- a/hugo.toml
+++ b/hugo.toml
@@ -11,6 +11,7 @@ theme = 'PaperMod'
   ShowPostNavLinks = true
   defaultTheme = "auto"
   disableThemeToggle = false
+  author = "Wayne"
 
 [params.assets]
   favicon = "/favicon.ico"
